--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,14 +2,14 @@ group 'com.pavelclaudiustefan.flutter_snapchat'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext.kotlin_version = '1.4.31'
     repositories {
         google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -34,7 +34,7 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 20
     }
     lintOptions {
         disable 'InvalidPackage'
@@ -47,6 +47,7 @@ dependencies {
             'com.snapchat.kit.sdk:creative:1.8.0',
             'com.snapchat.kit.sdk:login:1.8.0',
             'com.snapchat.kit.sdk:bitmoji:1.8.0',
+            'com.snapchat.kit.sdk:bitmoji-search:1.8.0',
             'com.snapchat.kit.sdk:core:1.8.0'
     ])
 }
