--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -3,8 +3,12 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="flutter_snapchat"
+        android:label="Flutter Snapchat"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data
+            android:name="flutterEmbedding"
+            android:value="2"/>
 
         <meta-data
             android:name="com.snapchat.kit.sdk.clientId"
