--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,6 @@
 name: flutter_snapchat_example
 description: Demonstrates how to use the flutter_snapchat plugin.
+version: 0.0.1
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -24,7 +25,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
-  path_provider: ^0.5.0+1
+  path_provider: ^1.6.28
 
 dev_dependencies:
   flutter_test:
