--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,7 +34,8 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
     defaultConfig {
-        minSdkVersion 20
+        minSdkVersion 21
+        multiDexEnabled true
     }
     lintOptions {
         disable 'InvalidPackage'
@@ -42,6 +43,10 @@ android {
 }
 
 dependencies {
+    implementation "androidx.multidex:multidex:2.0.1"
+
+    implementation 'com.google.android.material:material:1.3.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation([
             'com.snapchat.kit.sdk:creative:1.8.0',
