--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,7 @@ group 'com.pavelclaudiustefan.flutter_snapchat'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.4.31'
+    ext.kotlin_version = '1.4.32'
     repositories {
         google()
         jcenter()
@@ -45,14 +45,17 @@ android {
 dependencies {
     implementation "androidx.multidex:multidex:2.0.1"
 
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation "androidx.core:core-ktx:1.6.0-alpha01"
+    implementation "androidx.fragment:fragment-ktx:1.3.2"
+    implementation "com.google.android.material:material:1.3.0"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation([
-            'com.snapchat.kit.sdk:creative:1.8.0',
-            'com.snapchat.kit.sdk:login:1.8.0',
-            'com.snapchat.kit.sdk:bitmoji:1.8.0',
-            'com.snapchat.kit.sdk:bitmoji-search:1.8.0',
-            'com.snapchat.kit.sdk:core:1.8.0'
+            "com.snapchat.kit.sdk:creative:1.8.0",
+            "com.snapchat.kit.sdk:login:1.8.0",
+            "com.snapchat.kit.sdk:bitmoji:1.8.0",
+            "com.snapchat.kit.sdk:bitmoji-search:1.8.0",
+            "com.snapchat.kit.sdk:core:1.8.0"
     ])
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
