--- a/android/build.gradle
+++ b/android/build.gradle
@@ -58,4 +58,6 @@ dependencies {
             "com.snapchat.kit.sdk:core:1.8.0"
     ])
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 }
