--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
- platform :ios, '9.0'
+ platform :ios, '10.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -32,7 +32,8 @@ target 'Runner' do
   use_modular_headers!
 
 #  pod 'SnapSDK', :subspecs => ['SCSDKLoginKit', 'SCSDKCreativeKit', 'SCSDKBitmojiKit']
-  pod 'SnapSDK'
+#   pod 'SnapSDK', '~> 1.11.0'
+#   pod 'SnapSDK'
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
